feat: adicionado classes factory para gerenciamento dos  marketplaces